更新sonar 與符合其配置的相關改動